--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -503,7 +503,7 @@ input[type=submit]:hover {
 	list-style-type: none;
 	border-radius: 5px;
 	background-color: transparent;
-	color: black;
+	color: white;
 	font-family: 'Alegreya', serif;
 	font-size: 16px;
 	
@@ -512,7 +512,7 @@ input[type=submit]:hover {
 
 
 #popularprodList li{
-        margin: 10px 15px 10px 15px;
+        margin: 10px 5px 10px 5px;
 	float: left;
 }
 
