--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -86,22 +86,7 @@ header .intro-text .name {
   font-weight: 700;
   font-size: 2em;
 }
-header .intro-text .skills {
-  font-size: 1.25em;
-  font-weight: 300;
-}
-@media (min-width: 768px) {
-  header .container {
-    padding-top: 200px;
-    padding-bottom: 100px;
-  }
-  header .intro-text .name {
-    font-size: 4.75em;
-  }
-  header .intro-text .skills {
-    font-size: 1.75em;
-  }
-}
+
 .navbar-custom {
   background: #2C3E50;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -183,6 +168,10 @@ section h2 {
 section.success {
   background: #18BC9C;
   color: white;
+}
+section.membership{
+	background: #18BC9C;
+	color: white;
 }
 @media (max-width: 767px) {
   section {
@@ -345,16 +334,6 @@ fieldset[disabled] .btn-success.active {
 .btn-success .badge {
   color: #18BC9C;
   background-color: white;
-}
-.btn-social {
-  display: inline-block;
-  height: 50px;
-  width: 50px;
-  border: 2px solid white;
-  border-radius: 100%;
-  text-align: center;
-  font-size: 20px;
-  line-height: 45px;
 }
 .scroll-top {
   position: fixed;
