--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -169,7 +169,7 @@ section.success {
   background: #18BC9C;
   color: white;
 }
-section.membership{
+section #membership{
 	background: #18BC9C;
 	color: white;
 }
