--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -158,14 +158,8 @@ header .intro-text .name {
     font-size: 1.5em;
   }
 }
-section {
-  padding: 100px 0;
-}
-section h2 {
-  margin: 0;
-  font-size: 3em;
-}
-section.success {
+
+section.membership {
   background: #18BC9C;
   color: white;
 }
