--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -276,19 +276,14 @@ input[type=submit]:hover {
 
 #popularprodList{
 	list-style-type: none;
-	border-radius: 5px;
 	background-color: transparent;
 	color: white;
-	font-family: 'Alegreya', serif;
-	font-size: 16px;
 	
 }
-
-
-
 #popularprodList li{
         margin: 10px 5px 10px 5px;
 	float: left;
+	width: 100%;
 }
 
 #dealsOftheDay{
