--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -72,7 +72,7 @@ header {
   color: white;
 }
 header .container {
-  padding-top: 50px;
+  padding-top: 100px;
   padding-bottom: 50px;
 }
 header img {
@@ -86,7 +86,22 @@ header .intro-text .name {
   font-weight: 700;
   font-size: 2em;
 }
-
+header .intro-text .skills {
+  font-size: 1.25em;
+  font-weight: 300;
+}
+@media (min-width: 768px) {
+  header .container {
+    padding-top: 200px;
+    padding-bottom: 100px;
+  }
+  header .intro-text .name {
+    font-size: 4.75em;
+  }
+  header .intro-text .skills {
+    font-size: 1.75em;
+  }
+}
 .navbar-custom {
   background: #2C3E50;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -170,7 +185,6 @@ section.membership {
   background: #18BC9C;
   color: white;
 }
-
 @media (max-width: 767px) {
   section {
     padding: 75px 0;
@@ -178,6 +192,49 @@ section.membership {
   section.first {
     padding-top: 75px;
   }
+}
+#portfolio .portfolio-item {
+  margin: 0 0 15px;
+  right: 0;
+}
+#portfolio .portfolio-item .portfolio-link {
+  display: block;
+  position: relative;
+  max-width: 400px;
+  margin: 0 auto;
+}
+#portfolio .portfolio-item .portfolio-link .caption {
+  background: rgba(24, 188, 156, 0.9);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: all ease 0.5s;
+  -webkit-transition: all ease 0.5s;
+  -moz-transition: all ease 0.5s;
+}
+#portfolio .portfolio-item .portfolio-link .caption:hover {
+  opacity: 1;
+}
+#portfolio .portfolio-item .portfolio-link .caption .caption-content {
+  position: absolute;
+  width: 100%;
+  height: 20px;
+  font-size: 20px;
+  text-align: center;
+  top: 50%;
+  margin-top: -12px;
+  color: white;
+}
+#portfolio .portfolio-item .portfolio-link .caption .caption-content i {
+  margin-top: -12px;
+}
+#portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
+#portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
+  margin: 0;
+}
+#portfolio * {
+  z-index: 2;
 }
 @media (min-width: 767px) {
   #portfolio .portfolio-item {
@@ -189,21 +246,6 @@ footer .footer-below {
 color: white;
   padding: 25px 0;
   background-color: #233140;
-}
-.scroll-top {
-  position: fixed;
-  right: 2%;
-  bottom: 2%;
-  width: 50px;
-  height: 50px;
-  z-index: 1049;
-}
-.scroll-top .btn {
-  font-size: 20px;
-  width: 50px;
-  height: 50px;
-  border-radius: 100%;
-  line-height: 28px;
 }
 #skipnav a {
   padding: 6px;
@@ -275,24 +317,22 @@ input[type=submit]:hover {
 }
 
 #popularprodList{
-	list-style-type: none;
+	border-radius: 5px;
 	background-color: transparent;
-	color: white;
+	color: black;
+	font-family: 'Alegreya', serif;
+	font-size: 16px;
 	
-}
-#popularprodList li{
-        margin: 10px 5px 10px 5px;
-	float: left;
-	width: 100%;
 }
 
-#dealsOftheDay h3{
-        margin: 40px 15px 10px 15px;	
-	
+
+
+#popularprodList li{
+        margin: 10px 15px 10px 15px;
+	float: left;
 }
 
 #onsaleprodList{
-	list-style-type: none;
 	border-radius: 5px;
 	background-color: transparent;
 	color: black;
@@ -305,5 +345,4 @@ input[type=submit]:hover {
 #onsaleprodList li{
         margin: 10px 15px 10px 20px;
 	float: left;
-	width: 100%;
 }
