--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -279,22 +279,14 @@ input[type=submit]:hover {
 	border-radius: 5px;
 	background-color: transparent;
 	color: white;
-	font-family: 'Alegreya', serif;
-	font-size: 16px;
-	
 }
-
-
 
 #popularprodList li{
         margin: 10px 5px 10px 5px;
 	float: left;
+	width:100%;
 }
 
-#dealsOftheDay{
-	width:100%;
-	
-}
 #dealsOftheDay h3{
         margin: 40px 15px 10px 15px;	
 	
@@ -304,15 +296,13 @@ input[type=submit]:hover {
 	list-style-type: none;
 	border-radius: 5px;
 	background-color: transparent;
-	color: black;
-	font-family: 'Alegreya', serif;
-	font-size: 16px;
-	
-	
+	color: white;
+
 }
 
 #onsaleprodList li{
         margin: 10px 15px 10px 20px;
 	float: left;
+	width: 100%;
 }
 
