--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -279,13 +279,22 @@ input[type=submit]:hover {
 	border-radius: 5px;
 	background-color: transparent;
 	color: white;
+	font-family: 'Alegreya', serif;
+	font-size: 16px;
+	
 }
+
+
 
 #popularprodList li{
         margin: 10px 5px 10px 5px;
 	float: left;
 }
 
+#dealsOftheDay{
+	width:100%;
+	
+}
 #dealsOftheDay h3{
         margin: 40px 15px 10px 15px;	
 	
@@ -295,12 +304,14 @@ input[type=submit]:hover {
 	list-style-type: none;
 	border-radius: 5px;
 	background-color: transparent;
-	color: white;
-
+	color: black;
+	font-family: 'Alegreya', serif;
+	font-size: 16px;
+	
+	
 }
 
 #onsaleprodList li{
         margin: 10px 15px 10px 20px;
 	float: left;
 }
-
