--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -279,8 +279,7 @@ input[type=submit]:hover {
 	border-radius: 5px;
 	background-color: transparent;
 	color: white;
-	font-family: 'Alegreya', serif;
-	font-size: 16px;
+	width: 100%;
 	
 }
 
@@ -291,10 +290,6 @@ input[type=submit]:hover {
 	float: left;
 }
 
-#dealsOftheDay{
-	width:100%;
-	
-}
 #dealsOftheDay h3{
         margin: 40px 15px 10px 15px;	
 	
@@ -305,9 +300,7 @@ input[type=submit]:hover {
 	border-radius: 5px;
 	background-color: transparent;
 	color: black;
-	font-family: 'Alegreya', serif;
-	font-size: 16px;
-	
+	width: 100%:
 	
 }
 
