--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -273,10 +273,9 @@ input[type=submit]:hover {
 	margin: 20px 15px 20px 15px;
 	float: left;
 }
-#popularProducts, #dealsOftheDay{
+#popularProducts{
 	width: 100%:
 }
-
 #popularprodList{
 	list-style-type: none;
 	border-radius: 5px;
@@ -292,7 +291,6 @@ input[type=submit]:hover {
         margin: 40px 15px 10px 15px;	
 	
 }
-
 #onsaleprodList{
 	list-style-type: none;
 	border-radius: 5px;
