--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -273,7 +273,7 @@ input[type=submit]:hover {
 	margin: 20px 15px 20px 15px;
 	float: left;
 }
-#popularProducts{
+#popularProducts, #dealsOftheDay{
 	width: 100%:
 }
 #popularprodList{
