--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -287,7 +287,7 @@ input[type=submit]:hover {
 	float: left;
 }
 
-#dealsOftheDay h3{
+#dealsOftheDay h5{
         margin: 40px 15px 10px 15px;	
 	
 }
@@ -295,10 +295,10 @@ input[type=submit]:hover {
 	list-style-type: none;
 	border-radius: 5px;
 	background-color: transparent;
-	color: black;
+	color: white;
 }
 
 #onsaleprodList li{
-        margin: 10px 15px 10px 20px;
+        margin: 10px 15px 10px 15px;
 	float: left;
 }
