--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -273,7 +273,10 @@ input[type=submit]:hover {
 	margin: 20px 15px 20px 15px;
 	float: left;
 }
-#popularProducts, #dealsOftheDay{
+#popularProducts{
+	width: 100%:
+}
+#dealsOftheDay{
 	width: 100%:
 }
 #popularprodList{
