--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -301,3 +301,7 @@ input[type=submit]:hover {
         margin: 10px 15px 10px 15px;
 	float: left;
 }
+#dealsOftheDay h5{
+    margin: 40px 15px 10px 15px;	
+ 	
+ }
