--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -88,7 +88,7 @@ header .intro-text .name {
 }
 
 .navbar-custom {
-  background: #2C3E50;
+  background: #6D7993;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
