--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -68,7 +68,7 @@ hr.star-primary:after {
 }
 header {
   text-align: center;
-  background: #96858F;
+  background: #9099A2;
   color: white;
 }
 header .container {
