--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -171,11 +171,11 @@ section.membership {
   color: white;
 }
 #products{
-	background-color: #f2f2f2;
+	background-color: #cccccc;
 }
 
 section.success{
-	background-color: #f2f2f2;
+	background-color: #cccccc;
 }
 @media (max-width: 767px) {
   section {
@@ -291,4 +291,16 @@ input[type=submit]:hover {
 	display: inline;
 	float: left;
 	margin:10px;
+}
+
+#allprodList{
+	float: left;
+	list-style-type: none;
+}
+
+#allprodList li{
+	display: inline;
+	float: left;
+	margin:10px;
+	width:500px;
 }
