--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -293,7 +293,7 @@ input[type=submit]:hover {
 	margin:10px;
 }
 
-#allprodList{
+#allprodList1{
 	float: left;
 	list-style-type: none;
 }
@@ -302,4 +302,8 @@ input[type=submit]:hover {
 	display: inline;
 	float: left;
 	margin:10px;
+}
+
+#checkboxDiv{
+	list-style-type: none;
 }
