--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -293,7 +293,7 @@ input[type=submit]:hover {
 	margin:10px;
 }
 
-#allprodList1{
+#allprodList{
 	float: left;
 	list-style-type: none;
 }
@@ -304,6 +304,13 @@ input[type=submit]:hover {
 	margin:10px;
 }
 
-#checkboxDiv{
+#checkboxList{
+	float: left;
 	list-style-type: none;
+}
+
+#checkboxList li{
+	display: inline;
+	float: left;
+	margin:10px;
 }
