--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -239,6 +239,7 @@ input[type=text], input[type=email], input[type=date],  select {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+    color: black;
 }
 
 input[type=submit] {
