--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -239,7 +239,6 @@ input[type=text], input[type=email], input[type=date],  select {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-    color: black;
 }
 
 input[type=submit] {
@@ -314,4 +313,84 @@ input[type=submit]:hover {
 	display: inline;
 	float: left;
 	margin:10px;
+}
+
+#paintingProducts1{
+        display:none; 
+	float:left; 
+	margin: 30px 0 30px 10px; 
+	border: 1px solid black; 
+	height: 500px;	
+}
+
+#paintingProducts2{
+        display:none; 
+	float:left; 
+	margin: 30px 0 30px 10px; 
+	border: 1px solid black; 
+	height: 500px;	
+}
+
+#paintingProducts3{
+        display:none; 
+	float:left; 
+	margin: 30px 0 30px 10px; 
+	border: 1px solid black; 
+	height: 500px;	
+}
+
+#paintingProducts4{
+        display:none; 
+	float:left; 
+	margin: 30px 0 30px 10px; 
+	border: 1px solid black; 
+	height: 500px;	
+}
+
+#paintingProducts5{
+        display:none; 
+	float:left; 
+	margin: 30px 0 30px 10px; 
+	border: 1px solid black; 
+	height: 500px;	
+}
+
+#paintingProducts6{
+        display:none; 
+	float:left; 
+	margin: 30px 0 30px 10px; 
+	border: 1px solid black; 
+	height: 500px;	
+}
+
+#paintingProducts7{
+        display:none; 
+	float:left; 
+	margin: 30px 0 30px 10px; 
+	border: 1px solid black; 
+	height: 500px;
+}
+
+#paintingProducts8{
+        display:none; 
+	float:left; 
+	margin: 30px 0 30px 10px; 
+	border: 1px solid black; 
+	height: 500px;	
+}
+
+#paintingProducts9{
+        display:none; 
+	float:left; 
+	margin: 30px 0 30px 10px; 
+	border: 1px solid black; 
+	height: 500px;	
+}
+
+#paintingProducts10{
+        display:none; 
+	float:left; 
+	margin: 30px 0 30px 10px; 
+	border: 1px solid black; 
+	height: 500px;
 }
