--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -374,3 +374,9 @@ input[type=submit]:hover {
 	margin: 30px 0 30px 10px; 
 	height: 500px;
 }
+
+.allProducts{
+	margin: 20px 20px 20px 20px;
+	width: 1000px;
+}
+
