--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -315,68 +315,68 @@ input[type=submit]:hover {
 	margin:10px;
 }
 
+.allProducts{
+	float: left;
+	list-style-type: none;
+}
+
 #paintingProducts1{
-	float:left; 
-	margin: 30px 0 30px 10px;  
-	height: 500px;	
+	display: inline;
+	float: left;
+	margin:10px;	
 }
 
 #paintingProducts2{
-	float:left; 
-	margin: 30px 0 30px 10px; 
-	height: 500px;	
+	display: inline;
+	float: left;
+	margin:10px;	
 }
 
 #paintingProducts3{
-	float:left; 
-	margin: 30px 0 30px 10px;  
-	height: 500px;	
+	display: inline;
+	float: left;
+	margin:10px;
 }
 
 #paintingProducts4{
-	float:left; 
-	margin: 30px 0 30px 10px; 
-	height: 500px;	
+	display: inline;
+	float: left;
+	margin:10px;	
 }
 
 #paintingProducts5{
-	float:left; 
-	margin: 30px 0 30px 10px; 
-	height: 500px;	
+	display: inline;
+	float: left;
+	margin:10px;	
 }
 
 #paintingProducts6{
-	float:left; 
-	margin: 30px 0 30px 10px; 
-	height: 500px;	
+	display: inline;
+	float: left;
+	margin:10px;	
 }
 
 #paintingProducts7{
-	float:left; 
-	margin: 30px 0 30px 10px;  
-	height: 500px;
+	display: inline;
+	float: left;
+	margin:10px;
 }
 
 #paintingProducts8{
-	float:left; 
-	margin: 30px 0 30px 10px;  
-	height: 500px;	
+	display: inline;
+	float: left;
+	margin:10px;	
 }
 
 #paintingProducts9{
-	float:left; 
-	margin: 30px 0 30px 10px; 
-	height: 500px;	
+	display: inline;
+	float: left;
+	margin:10px;	
 }
 
 #paintingProducts10{
-	float:left; 
-	margin: 30px 0 30px 10px; 
-	height: 500px;
-}
-
-.allProducts{
-	margin: 20px 20px 20px 20px;
-	width: 1000px;
+	display: inline;
+	float: left;
+	margin:10px;
 }
 
