--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -306,6 +306,8 @@ input[type=submit]:hover {
 
 #checkboxList{
 	list-style-type: none;
+	font-weight:bold;
+	font-size: 14px;
 }
 
 #checkboxList li{
